Add a js background and news

--- a/index.html
+++ b/index.html
@@ -88,12 +88,20 @@
                 date: '2017-08-06',
                 link_title: '尤雨溪最后一次回应大漠穷秋',
                 link: 'https://zhuanlan.zhihu.com/p/28333484',
-            }
+            },
+            {
+                title: 'minggeJs疑山寨jQuery',
+                content: '引致该 github 项目下大致有100多的调侃讽刺意味浓厚的 issue',
+                date: '2015-12-18',
+                link_title: '如何评价 minggeJS ？',
+                link: 'https://www.zhihu.com/question/38537088',
+            },
         ]
       }
     }
   })
   </script>
+  <script type="text/javascript" color="255,0,0" opacity='0.7' zIndex="-2" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </body>
 
 </html>
