Add more news and read me

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
       return {
         data: [
             {
+                title: '前端项目 Gooflow 挖矿事件',
+                content: ' 作者 sdlddr 在 WEB 网页端设计流程图的 UI 组 件的开源项目 Gooflow 中, 使用 eval 添加挖矿程序, 在使用 MIT 开源协议的同时放在 github 上, 指责别人盗版, 窃贼.',
+                date: '2018-06-07',
+                link_title: 'Github 上一个颇有争议的 issue',
+                link: 'https://www.v2ex.com/t/460883?p=1',
+            },
+            {
                 title: 'deno issue 事件',
                 content: '<p>Node 作者 ry 开发了新项目 deno, 但一些中国开发者到此项目的issue下 留下无意义的 issue, 如: 请不要再更新了,老子学不动了; code six six; 随后ry 保护了此项目,禁止发言.<p> 此后相关 issue 被删除, 参与者陆续被封号. 最后有一位中国开发者到issue 里用英文指责 ry 对 node 不负责任, 请求关闭项目.<p/>',
                 date: '2018-05-30',
