--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
                 link: 'https://zhuanlan.zhihu.com/p/28333484',
             },
             {
+                title: '阿当发表《2016年前端技术观察》惹众怒',
+                content: '初代前端大战次世代全栈',
+                date: '2016-12-13',
+                link_title: '如何评价真阿当的文章：《2016年前端技术观察》？',
+                link: 'https://www.zhihu.com/question/53625757',
+            },
+            {
                 title: 'minggeJs疑山寨jQuery',
                 content: '引致该 github 项目下大致有100多的调侃讽刺意味浓厚的 issue',
                 date: '2015-12-18',
