--- a/index.html
+++ b/index.html
@@ -50,84 +50,90 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script>
     new Vue({
-    el: '#app',
-    data: function () {
-      return {
-        data: [
+      el: '#app',
+      data: function () {
+        return {
+          data: [
             {
-                title: 'Vue 的 star 数已经超过 React 啦',
-                content: 'Vue 每天仍然可以获得比 React 多几十个不等的 star, 按照现在的趋势 Vue 将会在 1-3 个月内超越 React 成为 Github 上被 star 最多的现代前端框架',
-                date: '2018-06-15',
-                link_title: '如何评价 Vue 在 Github 上的 star 数即将超越 React？',
-                link: 'https://www.v2ex.com/t/463284?p=2',
-            },
-						{
-                title: 'Office 365 正在用 JavaScript 重写',
-                content: '有媒体报道微软正在用 JS 重写 Office 365 等客户端软件',
-                date: '2018-06-13',
-                link_title: '如何评价Office 365 正在用 JavaScript 重写？',
-                link: 'https://www.zhihu.com/question/280906257',
-            },
-            {
-                title: '前端项目 Gooflow 挖矿事件',
-                content: ' 作者 sdlddr 在 WEB 网页端设计流程图的 UI 组 件的开源项目 Gooflow 中, 使用 eval 添加挖矿程序, 在使用 MIT 开源协议的同时放在 github 上, 指责别人盗版, 窃贼.',
-                date: '2018-06-07',
-                link_title: 'Github 上一个颇有争议的 issue',
-                link: 'https://www.v2ex.com/t/460883?p=1',
+              title: '摩拜前端负责人性骚扰',
+              content: '我是一名女生，一名来自摩拜SPE-前端组的工程师，于2017年8月来到摩拜就职。我曾经为我所在的 Mobike FE 感到骄傲和自豪。',
+              date: '2018-08-09',
+              link_title: '如何看待摩拜前端负责人小春(张耀春)的负面爆料？',
+              link: 'https://www.zhihu.com/question/289146339',
+            }, {
+              title: 'Vue 的 star 数已经超过 React 啦',
+              content: 'Vue 每天仍然可以获得比 React 多几十个不等的 star, 按照现在的趋势 Vue 将会在 1-3 个月内超越 React 成为 Github 上被 star 最多的现代前端框架',
+              date: '2018-06-15',
+              link_title: '如何评价 Vue 在 Github 上的 star 数即将超越 React？',
+              link: 'https://www.v2ex.com/t/463284?p=2',
             },
             {
-                title: 'deno issue 事件',
-                content: '<p>Node 作者 ry 开发了新项目 deno, 但一些中国开发者到此项目的issue下 留下无意义的 issue, 如: 请不要再更新了,老子学不动了; code six six; 随后ry 保护了此项目,禁止发言.<p> 此后相关 issue 被删除, 参与者陆续被封号. 最后有一位中国开发者到issue 里用英文指责 ry 对 node 不负责任, 请求关闭项目.<p/>',
-                date: '2018-05-30',
-                link_title: 'deno issue 事件中的那些作恶者们',
-                link: 'https://zhuanlan.zhihu.com/p/37550198',
+              title: 'Office 365 正在用 JavaScript 重写',
+              content: '有媒体报道微软正在用 JS 重写 Office 365 等客户端软件',
+              date: '2018-06-13',
+              link_title: '如何评价Office 365 正在用 JavaScript 重写？',
+              link: 'https://www.zhihu.com/question/280906257',
             },
             {
-                title: '阮一峰版的博客被 ddos 下线',
-                content: '<p>继快排事件后, 阮一峰的博客被人ddos, 主机服务商关闭了他的账户.<p> 随后阮一峰发文, 确认此 ddos 是有组织的攻击, it 培训类网站如: w3cplus, 珠峰培训等几个也被 ddos. 几天后, 阮一峰博客恢复正常',
-                date: '2018-05-13',
-                link_title: '如何看待阮一峰的博客被人攻击？',
-                link: 'https://www.zhihu.com/question/277049486',
+              title: '前端项目 Gooflow 挖矿事件',
+              content: ' 作者 sdlddr 在 WEB 网页端设计流程图的 UI 组 件的开源项目 Gooflow 中, 使用 eval 添加挖矿程序, 在使用 MIT 开源协议的同时放在 github 上, 指责别人盗版, 窃贼.',
+              date: '2018-06-07',
+              link_title: 'Github 上一个颇有争议的 issue',
+              link: 'https://www.v2ex.com/t/460883?p=1',
             },
             {
-                title: '有人发文指出: 阮一峰版的快速排序完全是错的',
-                content: '因为阮一峰博客的快排是非原地快排, 而面试者大多使用此版本的快排, 被作者批评. ',
-                date: '2018-05-13',
-                link_title: '面试官系列 (番外): 别再使用阮一峰版的快速排序了',
-                link: 'https://juejin.im/post/5af4902a6fb9a07abf728c40',
+              title: 'deno issue 事件',
+              content: '<p>Node 作者 ry 开发了新项目 deno, 但一些中国开发者到此项目的issue下 留下无意义的 issue, 如: 请不要再更新了,老子学不动了; code six six; 随后ry 保护了此项目,禁止发言.<p> 此后相关 issue 被删除, 参与者陆续被封号. 最后有一位中国开发者到issue 里用英文指责 ry 对 node 不负责任, 请求关闭项目.<p/>',
+              date: '2018-05-30',
+              link_title: 'deno issue 事件中的那些作恶者们',
+              link: 'https://zhuanlan.zhihu.com/p/37550198',
             },
             {
-                title: '我前端女神结婚了，现在很痛苦怎么办？',
-                content: '一位网友在知乎的提问: 他一直单恋前端女神, 甚至立志去了该女神所在的大公司,  还没有说上话, 就发现她准备结婚了, 很痛苦.',
-                date: '2018-03-29',
-                link_title: '来源:知乎',
-                link: 'https://www.zhihu.com/question/270341189',
+              title: '阮一峰版的博客被 ddos 下线',
+              content: '<p>继快排事件后, 阮一峰的博客被人ddos, 主机服务商关闭了他的账户.<p> 随后阮一峰发文, 确认此 ddos 是有组织的攻击, it 培训类网站如: w3cplus, 珠峰培训等几个也被 ddos. 几天后, 阮一峰博客恢复正常',
+              date: '2018-05-13',
+              link_title: '如何看待阮一峰的博客被人攻击？',
+              link: 'https://www.zhihu.com/question/277049486',
             },
             {
-                title: 'Angular布道师, 大漠穷秋删除所有文字并离职',
-                content: '',
-                date: '2017-08-06',
-                link_title: '尤雨溪最后一次回应大漠穷秋',
-                link: 'https://zhuanlan.zhihu.com/p/28333484',
+              title: '有人发文指出: 阮一峰版的快速排序完全是错的',
+              content: '因为阮一峰博客的快排是非原地快排, 而面试者大多使用此版本的快排, 被作者批评. ',
+              date: '2018-05-13',
+              link_title: '面试官系列 (番外): 别再使用阮一峰版的快速排序了',
+              link: 'https://juejin.im/post/5af4902a6fb9a07abf728c40',
             },
             {
-                title: '阿当发表《2016年前端技术观察》惹众怒',
-                content: '初代前端大战次世代全栈',
-                date: '2016-12-13',
-                link_title: '如何评价真阿当的文章：《2016年前端技术观察》？',
-                link: 'https://www.zhihu.com/question/53625757',
+              title: '我前端女神结婚了，现在很痛苦怎么办？',
+              content: '一位网友在知乎的提问: 他一直单恋前端女神, 甚至立志去了该女神所在的大公司,  还没有说上话, 就发现她准备结婚了, 很痛苦.',
+              date: '2018-03-29',
+              link_title: '来源:知乎',
+              link: 'https://www.zhihu.com/question/270341189',
             },
             {
-                title: 'minggeJs疑山寨jQuery',
-                content: '引致该 github 项目下大致有100多的调侃讽刺意味浓厚的 issue',
-                date: '2015-12-18',
-                link_title: '如何评价 minggeJS ？',
-                link: 'https://www.zhihu.com/question/38537088',
+              title: 'Angular布道师, 大漠穷秋删除所有文字并离职',
+              content: '',
+              date: '2017-08-06',
+              link_title: '尤雨溪最后一次回应大漠穷秋',
+              link: 'https://zhuanlan.zhihu.com/p/28333484',
             },
-        ]
+            {
+              title: '阿当发表《2016年前端技术观察》惹众怒',
+              content: '初代前端大战次世代全栈',
+              date: '2016-12-13',
+              link_title: '如何评价真阿当的文章：《2016年前端技术观察》？',
+              link: 'https://www.zhihu.com/question/53625757',
+            },
+            {
+              title: 'minggeJs疑山寨jQuery',
+              content: '引致该 github 项目下大致有100多的调侃讽刺意味浓厚的 issue',
+              date: '2015-12-18',
+              link_title: '如何评价 minggeJS ？',
+              link: 'https://www.zhihu.com/question/38537088',
+            },
+          ]
+        }
       }
-    }
-  })
+    })
   </script>
   <script type="text/javascript" color="255,0,0" opacity='0.7' zIndex="-2" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </body>
