--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
         return {
           data: [
             {
+              title: '某前端框架买 star 登上 GitHub Trending',
+              content: '今天上班，刷了一下 Github Trending，发现第一名是一个名叫 kui-vue，一天涨了一千多个 star 项目。',
+              date: '2018-09-03',
+              link_title: '石锤 github 买 star 行为',
+              link: 'https://juejin.im/post/5b8c9310f265da4361530560',
+            },
+            {
               title: '摩拜前端负责人性骚扰',
               content: '我是一名女生，一名来自摩拜SPE-前端组的工程师，于2017年8月来到摩拜就职。我曾经为我所在的 Mobike FE 感到骄傲和自豪。',
               date: '2018-08-09',
               link_title: '如何看待摩拜前端负责人小春(张耀春)的负面爆料？',
               link: 'https://www.zhihu.com/question/289146339',
-            }, {
+            },
+            {
               title: 'Vue 的 star 数已经超过 React 啦',
               content: 'Vue 每天仍然可以获得比 React 多几十个不等的 star, 按照现在的趋势 Vue 将会在 1-3 个月内超越 React 成为 Github 上被 star 最多的现代前端框架',
               date: '2018-06-15',
