--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           data: [
             {
               title: '阿里开源框架ant-design强制添加圣诞彩蛋并无法关闭',
-              content: '',
+              content: '添加此代码的作者afc163在同年9月10日中表示, changelog 里无须体现, 有几位发现的用户在其下也只是评论 nice, 无敌.. 在圣诞节凌晨有人表达不满, 发出 issue , 作者 duplicate 了 issue , 还评论说 早就做好了被骂的准备. 随后几十分钟, revert 了此彩蛋修改并提交主干',
               date: '2018-12-25',
               link_title: 'Ant Design 圣诞地雷',
               link: 'https://www.v2ex.com/t/520690',
