[update] add new frontend-entertainment event

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         return {
           data: [
             {
+              title: 'koa重要中间件koa-router作者公开宣称出售npm包',
+              content: '原作者alexmingoia在Github/koa-router的1月29日commit message中表示自己想要赚回一些自己为该库付出的心血。目前已转让给ZijianHe',
+              date: '2019-1-29',
+              link_title: '如何看待 koa-router 作者公开售卖 npm 包？',
+              link: 'https://www.zhihu.com/question/310604967/answer/584618557',
+            },
+            {
               title: '阿里开源框架ant-design强制添加圣诞彩蛋并无法关闭',
               content: '添加此代码的作者afc163在同年9月10日中表示, changelog 里无须体现, 有几位发现的用户在其下也只是评论 nice, 无敌.. 在圣诞节凌晨有人表达不满, 发出 issue , 作者 duplicate 了 issue , 还评论说 早就做好了被骂的准备. 随后几十分钟, revert 了此彩蛋修改并提交主干',
               date: '2018-12-25',
