--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               content: '原作者alexmingoia在Github/koa-router的1月29日commit message中表示自己想要赚回一些自己为该库付出的心血。目前已转让给ZijianHe',
               date: '2019-1-29',
               link_title: '如何看待 koa-router 作者公开售卖 npm 包？',
-              link: 'https://www.zhihu.com/question/310604967/answer/584618557',
+              link: 'https://www.zhihu.com/question/310604967',
             },
             {
               title: '阿里开源框架ant-design强制添加圣诞彩蛋并无法关闭',
