--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
               link: 'https://www.v2ex.com/t/460883?p=1',
             },
             {
+              title: '前端娱乐圈正式上线!',
+              content: '一对小情侣一下午合作而上线的吃瓜网站',
+              date: '2018-06-01',
+              link_title: '作者公众号: YongHaoHu 写东西的 cache',
+              link: 'https://yonghaowu.github.io/',
+            },
+            {
               title: 'deno issue 事件',
               content: '<p>Node 作者 ry 开发了新项目 deno, 但一些中国开发者到此项目的issue下 留下无意义的 issue, 如: 请不要再更新了,老子学不动了; code six six; 随后ry 保护了此项目,禁止发言.<p> 此后相关 issue 被删除, 参与者陆续被封号. 最后有一位中国开发者到issue 里用英文指责 ry 对 node 不负责任, 请求关闭项目.<p/>',
               date: '2018-05-30',
